--- a/package.json
+++ b/package.json
@@ -11,14 +11,20 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "axios-hooks": "^2.1.0",
     "chart.js": "^2.9.3",
     "components": "^0.1.0",
+    "filepond": "^4.18.0",
+    "filepond-plugin-image-exif-orientation": "^1.0.9",
+    "filepond-plugin-image-preview": "^4.6.4",
     "moment": "^2.27.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bullet-status": "^0.0.2",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
+    "react-filepond": "^7.0.1",
+    "react-hooks-paginator": "^0.4.4",
     "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
