--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "1.x",
+    "@hookform/resolvers": "^0.1.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/pickers": "^3.2.10",
     "@material-ui/styles": "^4.10.0",
+    "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -14,6 +18,7 @@
     "axios-hooks": "^2.1.0",
     "chart.js": "^2.9.3",
     "components": "^0.1.0",
+    "date-fns": "^2.16.0",
     "filepond": "^4.18.0",
     "filepond-plugin-image-exif-orientation": "^1.0.9",
     "filepond-plugin-image-preview": "^4.6.4",
@@ -24,15 +29,18 @@
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
     "react-filepond": "^7.0.1",
+    "react-hook-form": "^6.4.1",
     "react-hooks-paginator": "^0.4.4",
     "react-perfect-scrollbar": "^1.5.8",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-toastify": "^6.0.8",
     "recompose": "^0.30.0",
     "toastify": "^2.0.1",
     "uuid": "^8.2.0",
-    "validate.js": "^0.13.1"
+    "validate.js": "^0.13.1",
+    "yup": "^0.29.3"
   },
   "scripts": {
     "start": "react-scripts start",
