--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react": "^16.13.1",
     "react-bullet-status": "^0.0.2",
     "react-chartjs-2": "^2.9.0",
+    "react-cookie": "^4.0.3",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.1",
     "react-filepond": "^7.0.1",
     "react-hook-form": "^6.4.1",
