--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@
 .DS_Store
 .env.local
 .env.development.local
+.env.development
+.env.production
+.env.test
 .env.test.local
 .env.production.local
 
