--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chart.js": "^2.9.3",
     "components": "^0.1.0",
     "date-fns": "^2.16.0",
+    "env-cmd": "^10.1.0",
     "filepond": "^4.18.0",
     "filepond-plugin-image-exif-orientation": "^1.0.9",
     "filepond-plugin-image-preview": "^4.6.4",
@@ -48,6 +49,7 @@
   },
   "scripts": {
     "start": "set PORT=3002 && react-scripts start",
+    "build:staging": "env-cmd -f .env.staging npm run build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
